WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96993
[Refactoring] ContentDistributor::distributeSelectionsTo should not change ContentDistribution pool.
https://bugs.webkit.org/show_bug.cgi?id=96993
Summary
[Refactoring] ContentDistributor::distributeSelectionsTo should not change Co...
Shinya Kawanaka
Reported
2012-09-18 01:38:27 PDT
Since we would like to reuse the ContentDistribution pool later, it should be const in this method. Instead, we should have Vector<bool> to know each element is distributed or not.
Attachments
Patch
(4.02 KB, patch)
2012-09-18 01:47 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-09-18 01:47:02 PDT
Created
attachment 164516
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-18 18:04:37 PDT
Comment on
attachment 164516
[details]
Patch Clearing flags on attachment: 164516 Committed
r128956
: <
http://trac.webkit.org/changeset/128956
>
WebKit Review Bot
Comment 3
2012-09-18 18:04:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug