[Refactoring] ContentDistributor::distributeSelectionsTo should not change ContentDistribution pool. https://bugs.webkit.org/show_bug.cgi?id=96993

Reviewed by Dimitri Glazkov.

Since we would like to reuse ContentDistribution pool, it should not be updated in
ContentDistributor::distributeSelectionsTo. Instead, we should have Vector<bool> to indicate an element is
distributed or not.

No new tests, simple refactoring.

* html/shadow/ContentDistributor.cpp:
(WebCore::ContentDistributor::distribute):
(WebCore::ContentDistributor::distributeSelectionsTo):
* html/shadow/ContentDistributor.h:
(ContentDistributor):


Canonical link: https://commits.webkit.org/115012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128956 268f45cc-cd09-0410-ab3c-d52691b4dbfc