Source/WebCore/html/shadow/ContentDistributor.cpp
@@ -59,6 +59,8 @@ void ContentDistributor::distribute(Element* host)
     ContentDistribution pool;
     for (Node* node = host->firstChild(); node; node = node->nextSibling())
         pool.append(node);
+    Vector<bool> distributed(pool.size());
+    distributed.fill(false);
 
     for (ShadowRoot* root = host->youngestShadowRoot(); root; root = root->olderShadowRoot()) {
         for (Node* node = root; node; node = node->traverseNextNode(root)) {
@@ -69,7 +71,7 @@ void ContentDistributor::distribute(Element* host)
                 continue;
             ShadowRoot* older = root->olderShadowRoot();
             if (point->doesSelectFromHostChildren())
-                distributeSelectionsTo(point, pool);
+                distributeSelectionsTo(point, pool, distributed);
             else if (older && !older->assignedTo()) {
                 distributeNodeChildrenTo(point, older);
                 older->setAssignedTo(point);
@@ -106,21 +108,22 @@ void ContentDistributor::finishInivalidation()
     m_validity = Invalidated;
 }
 
-void ContentDistributor::distributeSelectionsTo(InsertionPoint* insertionPoint, ContentDistribution& pool)
+void ContentDistributor::distributeSelectionsTo(InsertionPoint* insertionPoint, const ContentDistribution& pool, Vector<bool>& distributed)
 {
     ContentDistribution distribution;
     ContentSelectorQuery query(insertionPoint);
 
     for (size_t i = 0; i < pool.size(); ++i) {
-        Node* child = pool[i].get();
-        if (!child)
+        if (distributed[i])
             continue;
+
+        Node* child = pool[i].get();
         if (!query.matches(child))
             continue;
 
         distribution.append(child);
         m_nodeToInsertionPoint.add(child, insertionPoint);
-        pool[i] = 0;
+        distributed[i] = true;
     }
 
     insertionPoint->setDistribution(distribution);
